--- a/packages/self-embedding-component/package.json
+++ b/packages/self-embedding-component/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@scbd/self-embedding-component",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "private": false,
   "license": "MIT",
-  "main": "dist/SelfEmbeddingComponent.common.js",
+  "main": "dist/SelfEmbeddingComponent.umd.min.js",
   "unpkg": "dist/SelfEmbeddingComponent.umd.min.js",
   "files": [
     "dist/*",
@@ -13,7 +13,7 @@
     "serve": "vue-cli-service serve",
     "build": "sh scripts/build.sh",
     "lint": "vue-cli-service lint --fix -c ../../.eslintrc.js",
-    "release": "yarn publish --access=public --tag beta"
+    "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
