--- a/packages/self-embedding-component/package.json
+++ b/packages/self-embedding-component/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "sh scripts/build.sh",
-    "lint": "vue-cli-service lint --fix -c ../../.eslintrc.js",
+    "lint": "vue-cli-service lint --fix ",
     "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
@@ -26,7 +26,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "@scbd/default-options": "^0.0.7",
+    "@scbd/default-options": "^0.0.53",
     "change-case": "^4.1.0",
     "webfont": "^9.0.0"
   }
