--- a/packages/sso-vue-plugin-scbd/package.json
+++ b/packages/sso-vue-plugin-scbd/package.json
@@ -25,12 +25,13 @@
     "yarn-outdated": "yarn outdated"
   },
   "dependencies": {
-    "@scbd/default-options": "^0.0.7",
+    "@scbd/default-options": "^0.0.53",
     "ky": "^0.16.1",
     "ky-universal": "^0.3.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@scbd/self-embedding-component": "^0.0.8",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-e2e-cypress": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
