--- a/packages/default-options/package.json
+++ b/packages/default-options/package.json
@@ -1,25 +1,28 @@
 {
-  "name"   : "@scbd/default-options",
+  "name": "@scbd/default-options",
   "version": "0.0.53",
   "private": false,
   "license": "MIT",
-  "main"   : "dist/DefaultOptions.umd.min.js",
-  "unpkg"  : "dist/DefaultOptions.umd.min.js",
-  "files"  : [ "dist/*", "src/*" ],
+  "main": "src/index.js",
+  "unpkg": "src/index.js",
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
   "scripts": {
-    "serve"  : "vue-cli-service serve --open",
-    "build"  : "vue-cli-service build --mode production --name DefaultOptions  --target lib --formats umd-min src/index.js",
-    "lint"   : "vue-cli-service lint --fix -c ../../.eslintrc.js",
+    "serve": "vue-cli-service serve --open",
+    "lint": "vue-cli-service lint --fix ",
     "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel"      : "^4.1.0",
+    "@scbd/self-embedding-component": "^0.0.8",
+    "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-e2e-cypress": "^4.1.0",
-    "@vue/cli-plugin-eslint"     : "^4.1.0",
-    "@vue/cli-service"           : "^4.1.0",
-    "babel-eslint"               : "^10.0.3",
-    "eslint"                     : "^5.16.0",
-    "eslint-plugin-vue"          : "^5.0.0",
-    "vue-template-compiler"      : "^2.6.10"
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
