--- a/packages/page-header-fixed/package.json
+++ b/packages/page-header-fixed/package.json
@@ -2,7 +2,7 @@
   "name": "@scbd/page-header-fixed",
   "private": false,
   "license": "MIT",
-  "version": "0.0.55",
+  "version": "0.0.61",
   "unpkg": "dist/PageHeaderFixed.umd.min.js",
   "main": "dist/PageHeaderFixed.umd.min.js",
   "browser": {
@@ -14,8 +14,9 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve --open --mode stg tests/dev/main.js",
+    "preview": "serve -s dist",
     "build": "NODE_ENV=production sh scripts/build.sh",
-    "lint": "vue-cli-service lint --fix -c .eslintrc.js",
+    "lint": "vue-cli-service lint --fix",
     "deploy:dev": "vue-cli-service s3-deploy --mode dev",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "test:e2e": "vue-cli-service test:e2e",
@@ -24,24 +25,26 @@
     "release": "yarn publish --access=public --tag latest"
   },
   "dependencies": {
-    "@scbd/default-options": "0.0.7",
+    "@scbd/default-options": "^0.0.53",
     "change-case": "^3.1.0",
-    "core-js": "^3.3.2",
+    "check-ie": "^2.0.0",
+    "ky-universal": "^0.3.0",
     "tiny-debounce": "^0.1.1",
-    "vue": "^2.6.10",
     "vue-i18n": "^8.0.0",
-    "webfont": "^9.0.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "@rollup/plugin-alias": "^2.2.0",
     "@rollup/plugin-buble": "^0.20.0",
     "@rollup/plugin-replace": "^2.2.1",
+    "@scbd/self-embedding-component": "^0.0.8",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-e2e-cypress": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "core-js": "^3.3.2",
     "cross-env": "^6.0.3",
     "cypress-image-snapshot": "^3.1.1",
     "eslint": "^6.7.0",
@@ -56,7 +59,8 @@
     "vue": "^2.6.10",
     "vue-cli-plugin-i18n": "^0.6.0",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webfont": "^9.0.0"
   },
   "@ecosystem": {
     "symlinkWorkspaces": true
