--- a/packages/map-nav/package.json
+++ b/packages/map-nav/package.json
@@ -24,7 +24,7 @@
     "@amcharts/amcharts4": "^4.7.12",
     "@amcharts/amcharts4-geodata": "^4.1.9",
     "@scbd/default-options": "0.0.53",
-    "@scbd/self-embedding-component": "0.0.7",
+    "@scbd/self-embedding-component": "^0.0.8",
     "bootstrap": "^4.4.1",
     "change-case": "^4.1.0",
     "core-js": "^3.4.3",
