--- a/packages/page-header-fixed/package.json
+++ b/packages/page-header-fixed/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@scbd/default-options": "^0.0.53",
+    "@scbd/self-embedding-component": "^0.0.8",
     "change-case": "^3.1.0",
     "check-ie": "^2.0.0",
     "ky-universal": "^0.3.0",
