--- a/packages/default-options/package.json
+++ b/packages/default-options/package.json
@@ -5,13 +5,12 @@
   "license": "MIT",
   "main": "src/index.js",
   "unpkg": "src/index.js",
-  "files": [
-    "dist/*",
-    "src/*"
-  ],
+  "files": [ "src/*" ],
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "lint": "vue-cli-service lint --fix ",
+    "test:e2e": "vue-cli-service test:e2e",
+    "test:e2e:headless": "vue-cli-service test:e2e --headless",
     "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
@@ -24,8 +23,5 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
-  },
-  "dependencies": {
-    "@scbd/self-embedding-component": "^0.0.8"
   }
 }
