--- a/packages/www-css/package.json
+++ b/packages/www-css/package.json
@@ -9,11 +9,9 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
+    "build": "yarn scss && node scripts/index.js",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
     "scss": "node-sass src/CBD/web/themes/custom/bootstrap_sass/scss/barrio/_import.scss dist/style.css && node-sass  --output-style compressed src/CBD/web/themes/custom/bootstrap_sass/scss/barrio/_import.scss dist/style.min.css && cp -R src/cbd/web/themes/custom/bootstrap_sass/images/* dist/images",
-    "sed": "sed -i -e 's~../../images/~images/~g' dist/style.css && sed -i -e 's~../../images/~images/~g' dist/style.min.css",
     "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
@@ -32,6 +30,7 @@
   },
   "dependencies": {
     "@scbd/default-options": "^0.0.53",
+    "@scbd/page-header-fixed": "^0.0.61",
     "@scbd/self-embedding-component": "^0.0.8",
     "webfont": "^9.0.0"
   }
