--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,13 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run: yarn --version
       - restore_cache:
           keys:
             - ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - ecosystem-{{ .Branch }}-
             - ecosystem-
-      - run: yarn
+      - run: yarn install --frozen-lockfile
       - run: yarn boot
       - save_cache:
           key: ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
@@ -57,5 +58,5 @@ workflows:
           requires:
             - lint
       - test:
-        requires:
-          - build
+          requires:
+            - lint
