--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: yarn --version
+      - run: yarn --version && yarn install
       - restore_cache:
           keys:
             - ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - ecosystem-{{ .Branch }}-
             - ecosystem-
-      - run: yarn install --frozen-lockfile
       - run: yarn boot
       - save_cache:
           key: ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
