--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,4 @@ workflows:
       - build:
           requires:
             - lint
-      - test:
-          requires:
-            - build
+      - test
