--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: yarn --version && yarn install
+      - run: pwd && yarn --version && yarn install
       - restore_cache:
           keys:
             - ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
