--- a/packages/www-css/package.json
+++ b/packages/www-css/package.json
@@ -15,7 +15,6 @@
     "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
-    "@scbd/self-embedding-component": "^0.0.8",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-e2e-cypress": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
@@ -26,12 +25,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.13.0",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "dependencies": {
-    "@scbd/default-options": "^0.0.53",
-    "@scbd/page-header-fixed": "^0.0.61",
-    "@scbd/self-embedding-component": "^0.0.8",
-    "webfont": "^9.0.0"
+    "vue-template-compiler": "^2.6.10",
+    "@scbd/self-embedding-component": "^0.0.9"
   }
 }
