--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test:e2e:headless": "lerna run test:e2e:headless",
     "lint"             : "lerna run lint",
     "prePublish"       : "lerna run lint && lerna run build && lerna run test:e2e:headless",
+    "l:clean": "lerna clean -y",
     "prepatch"         : "lerna version prepatch",
     "rebuild"          : "lerna clean -y && rm -rf node_modules && rm yarn.lock && yarn && lerna bootstrap && lerna link",
-    "boot"             : "lerna bootstrap && lerna link",
+    "l:boot"             : "lerna bootstrap",
     "ui"               : "vue ui"
   },
   "dependencies": {
