--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,13 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: pwd && yarn --version && yarn install
       - restore_cache:
           keys:
-            - ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - ecosystem-
-      - run: yarn boot
+            - eco-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - eco-
+      - run: pwd && yarn --version && yarn install && yarn boot
       - save_cache:
-          key: ecosystem-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          key: eco-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
             - node_modules/
             - ~/.npm
