--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           keys:
             - eco1-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - eco1-
-      - run: pwd && yarn --version && yarn install && cypress install && yarn boot
+      - run: pwd && yarn --version && yarn install && yarn boot
       - save_cache:
           key: eco1-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
@@ -24,26 +24,25 @@ jobs:
             - ~/.npm
             - ~/.cache
       - persist_to_workspace:
-          root: ~/scbd
-          paths:
-            - ecosystem
+          root: ~/scbd/ecosystem
+
   lint:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/scbd
+          at: ~/scbd/ecosystem
       - run: yarn run lint
   build:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/scbd
+          at: ~/scbd/ecosystem
       - run: yarn run build
   test:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/scbd
+          at: ~/scbd/ecosystem
       - run: cypress install
       - run: yarn run test:e2e:headless
 workflows:
