--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
     "@rollup/plugin-alias"       : "^2.2.0",
     "@rollup/plugin-buble"       : "^0.20.0",
     "@rollup/plugin-replace"     : "^2.2.1",
-    "@vue/cli-plugin-babel"      : "^4.0.0",
-    "@vue/cli-plugin-e2e-cypress": "^4.0.5",
-    "@vue/cli-plugin-eslint"     : "^4.0.0",
-    "@vue/cli-service"           : "^4.0.0",
-    "babel-eslint"               : "^10.0.3",
-    "cross-env"                  : "^6.0.3",
-    "css-loader"                 : "^3.2.0",
-    "eslint"                     : "^5.16.0",
-    "eslint-plugin-vue"          : "^5.0.0",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-e2e-cypress": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10",
     "lerna"                      : "^3.18.4",
     "minimist"                   : "^1.2.0",
     "rollup"                     : "^1.27.8",
@@ -41,7 +40,6 @@
     "rollup-plugin-commonjs"     : "^10.1.0",
     "rollup-plugin-terser"       : "^5.1.2",
     "rollup-plugin-vue"          : "^5.1.4",
-    "vue-sfc-rollup"             : "^2.1.0",
-    "vue-template-compiler"      : "^2.6.10"
+    "vue-sfc-rollup"             : "^2.1.0"
   }
 }
