--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             - ~/.cache
       - persist_to_workspace:
           root: ~/scbd
-            - path: ecosystem
+          paths: ecosystem
 
   lint:
     <<: *defaults
