--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           keys:
             - eco3-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - eco3-
-      - run: pwd && yarn --version && yarn install --frozen-lockfile && $(yarn bin)/cypress install && yarn boot
+      - run: pwd && yarn --version && yarn install --frozen-lockfile && yarn boot
       - save_cache:
           key: eco3-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
@@ -27,8 +27,6 @@ jobs:
           root: ~/scbd
           paths: 
             - ecosystem
-            - ~/.npm
-            - ~/.cache
 
   lint:
     <<: *defaults
