--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,19 +32,19 @@ jobs:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/scbd/ecosystem
+          at: ~/scbd
       - run: pwd && ls -al && yarn run lint
   build:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/scbd/ecosystem
+          at: ~/scbd
       - run: yarn run build
   test:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/scbd/ecosystem
+          at: ~/scbd
       - run: alias cypress="$(yarn bin)/cypress" && yarn run test:e2e:headless
 
 workflows:
