--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           keys:
             - eco5-{{ checksum "yarn.lock" }}
             - eco5-
-      - run: pwd && yarn --version && ls -al && yarn boot
+      - run: pwd && yarn --version && ls -al && yarn install && yarn boot
       - save_cache:
           key: eco5-{{ checksum "yarn.lock" }}
           paths:
@@ -45,7 +45,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/scbd
-      - run: ls -al / && pwd && ls -al
+      - run: ls -al ~/ && pwd && ls -al
       - run: pwd && ls -al && alias cypress="$(yarn bin)/cypress" && yarn run test:e2e:headless
 
 workflows:
