--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/scbd
+      - restore_cache:
+        keys:
+          - eco5-{{ checksum "yarn.lock" }}
+          - eco5-
       - run: ls -al ~/ && pwd && ls -al
       - run: pwd && ls -al && alias cypress="$(yarn bin)/cypress" && yarn run test:e2e:headless
 
