--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ workflows:
       - audit:
           requires:
             - install
-      - audit:
+      - lint:
           requires:
             - audit
       - test:
