--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           keys:
             - eco5-{{ checksum "yarn.lock" }}
             - eco5-
-      - run: pwd && yarn --version && ls -al && yarn install && yarn boot
+      - run:  yarn install && yarn boot
       - save_cache:
           key: eco5-{{ checksum "yarn.lock" }}
           paths:
@@ -40,9 +40,13 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/scbd
+      - restore_cache:  
+          keys:
+            - eco5-{{ checksum "yarn.lock" }}
+            - eco5-
       - run:
           name: Security Audit
-          command: lerna exec yarn audit
+          command: $(yarn bin)/lerna exec yarn audit
   build:
     <<: *defaults
     steps:
