--- a/packages/page-footer/package.json
+++ b/packages/page-footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scbd/page-footer",
-  "version": "0.0.52",
+  "version": "0.0.57",
   "private": false,
   "license": "MIT",
   "main": "dist/PageFooter.umd.min.js",
@@ -13,22 +13,22 @@
     "src/*"
   ],
   "scripts": {
-    "serve": "vue-cli-service serve --mode stg",
+    "serve": "vue-cli-service serve --mode stg --open",
     "build": "NODE_ENV=production sh scripts/build.sh",
-    "deploy:dev": "vue-cli-service s3-deploy --mode dev",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:e2e:headless-": "vue-cli-service test:e2e --headless",
+    "test:e2e:headless": "vue-cli-service test:e2e --headless",
     "lint": "vue-cli-service lint --fix ",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
-    "release": "yarn publish --access=public --tag latest",
-    "yarn-upgrade-deps": "yarn upgrade-interactive --latest",
-    "yarn-outdated": "yarn outdated"
+    "release": "yarn publish --access=public --tag latest"
   },
   "dependencies": {
-    "@scbd/default-options": "^0.0.53",
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "webfont": "^9.0.0"
+    "@scbd/default-options": "^0.0.54",
+    "change-case": "^3.1.0",
+    "check-ie": "^2.0.0",
+    "ky": "^0.16.2",
+    "ky-universal": "^0.3.0",
+    "vue-i18n": "^8.0.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -37,7 +37,7 @@
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^6.1.2",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-template-compiler": "^2.6.10"
   },
