--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
-  "name"      : "ecosystem",
-  "private"   : true,
+  "name": "ecosystem",
+  "private": true,
   "license": "MIT",
-  "workspaces": [ "packages/*" ],
+  "workspaces": [
+    "packages/*"
+  ],
   "description": "Component library front-end",
   "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
   "scripts": {
-    "build"            : "lerna run build",
-    "publish"           : "lerna publish from-package",
+    "build": "lerna run build",
+    "publish": "lerna publish from-package",
     "test:e2e:headless": "lerna run test:e2e:headless",
-    "lint"             : "lerna run lint",
-    "prePublish"       : "lerna run lint && lerna run build && lerna run test:e2e:headless",
-    "clean"          : "lerna clean -y",
-    "prepatch"         : "lerna version prepatch",
-    "rebuild"          : "lerna clean -y && rm -rf node_modules && rm yarn.lock && yarn && lerna bootstrap && lerna link",
-    "boot"           : "lerna bootstrap && lerna link",
-    "ui"               : "vue ui",
+    "lint:init": "node scripts/init-eslint.js",
+    "lint": "lerna run lint",
+    "prePublish": "lerna run lint && lerna run build && lerna run test:e2e:headless",
+    "clean": "lerna clean -y",
+    "prepatch": "lerna version prepatch",
+    "rebuild": "lerna clean -y && rm -rf node_modules && rm yarn.lock && yarn && lerna bootstrap && lerna link",
+    "boot": "lerna bootstrap && lerna link",
+    "ui": "vue ui",
     "yarn-upgrade-deps": "yarn upgrade-interactive --latest",
     "yarn-outdated": "yarn outdated"
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "vue"    : "^2.6.10"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@rollup/plugin-alias"       : "^2.2.0",
-    "@rollup/plugin-buble"       : "^0.20.0",
-    "@rollup/plugin-replace"     : "^2.2.1",
+    "@rollup/plugin-alias": "^3.0.0",
+    "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-e2e-cypress": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "lerna"                      : "^3.18.4",
-    "minimist"                   : "^1.2.0",
-    "rollup"                     : "^1.27.8",
-    "rollup-plugin-babel"        : "^4.3.3",
-    "rollup-plugin-commonjs"     : "^10.1.0",
-    "rollup-plugin-terser"       : "^5.1.2",
-    "rollup-plugin-vue"          : "^5.1.4",
-    "vue-sfc-rollup"             : "^2.1.0"
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "lerna": "^3.18.4",
+    "minimist": "^1.2.0",
+    "rollup": "^1.27.8",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-vue": "^5.1.4",
+    "vue-sfc-rollup": "^2.1.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
