--- a/packages/page-footer/package.json
+++ b/packages/page-footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scbd/page-footer",
-  "version": "0.0.57",
+  "version": "0.0.58",
   "private": false,
   "license": "MIT",
   "main": "dist/PageFooter.umd.min.js",
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "@scbd/default-options": "^0.0.54",
-    "change-case": "^3.1.0",
+    "@scbd/webpack-plugin-public-path": "^0.0.1",
+    "change-case": "^4.1.1",
     "check-ie": "^2.0.0",
     "ky": "^0.16.2",
     "ky-universal": "^0.3.0",
@@ -36,7 +37,7 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-template-compiler": "^2.6.10"
