--- a/packages/page-side-bar/package.json
+++ b/packages/page-side-bar/package.json
@@ -11,22 +11,22 @@
   },
   "dependencies": {
     "@scbd/default-options": "^0.0.54",
-    "change-case": "^3.1.0",
+    "change-case": "^4.1.1",
+    "check-ie": "^2.0.0",
     "ky": "^0.16.1",
     "ky-universal": "^0.3.0",
-    "whatwg-fetch": "^3.0.0",
-    "check-ie": "^2.0.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "core-js": "^3.4.4",
-    "vue": "^2.6.11",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-e2e-cypress": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "core-js": "^3.4.4",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.10"
   },
   "@ecosystem": {
