--- a/packages/webpack-plugin-public-path/package.json
+++ b/packages/webpack-plugin-public-path/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "@scbd/default-options",
-  "version": "0.0.54",
+  "name": "@scbd/webpack-plugin-public-path",
+  "version": "0.0.1",
+  "description": "load webpack chunks via SCBD's cdn",
+  "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
   "private": false,
   "license": "MIT",
   "main": "src/index.js",
@@ -9,20 +11,16 @@
     "src/*"
   ],
   "scripts": {
-    "serve": "vue-cli-service serve --open",
-    "lint": "vue-cli-service lint --fix ",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:e2e:headless": "vue-cli-service test:e2e --headless",
+    "lint": "vue-cli-service lint --fix",
     "release": "yarn publish --access=public --tag latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-e2e-cypress": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
