--- a/packages/page-header-fixed/package.json
+++ b/packages/page-header-fixed/package.json
@@ -2,7 +2,7 @@
   "name": "@scbd/page-header-fixed",
   "private": false,
   "license": "MIT",
-  "version": "0.0.67",
+  "version": "0.0.69",
   "unpkg": "dist/PageHeaderFixed.umd.min.js",
   "main": "dist/PageHeaderFixed.umd.min.js",
   "browser": {
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@scbd/default-options": "^0.0.54",
+    "@scbd/webpack-plugin-public-path": "^0.0.1",
     "change-case": "^4.1.1",
     "check-ie": "^2.0.0",
     "ky": "^0.16.2",
