--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "rebuild": "lerna clean -y && rm -rf node_modules && rm yarn.lock && yarn && lerna bootstrap && lerna link",
     "boot": "lerna bootstrap && lerna link",
     "ui": "vue ui",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "yarn-upgrade-deps": "yarn upgrade-interactive --latest",
     "yarn-outdated": "yarn outdated"
   },
@@ -45,6 +47,7 @@
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-vue": "^5.1.4",
     "vue-sfc-rollup": "^2.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuepress": "^1.3.0"
   }
 }
