--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 cypress.env.json
 /tests/e2e/videos/
 /tests/e2e/screenshots/
--workspace
+*.code-workspace
 
 # local env files
 .env.local
