--- a/packages/map-nav/package.json
+++ b/packages/map-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scbd/map-nav",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "private": false,
   "license": "MIT",
   "main": "dist/MapNav.common.js",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.7.12",
     "@amcharts/amcharts4-geodata": "^4.1.9",
+    "@scbd/am4-map-base": "^0.0.3",
     "@scbd/default-options": "0.0.54",
     "@scbd/self-embedding-component": "^0.0.9",
     "change-case": "^4.1.0",
