--- a/packages/morph-map/package.json
+++ b/packages/morph-map/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@scbd/am4-map-base": "^0.0.4",
+    "@scbd/www-css": "^0.0.18",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
