--- a/packages/page-side-bar/package.json
+++ b/packages/page-side-bar/package.json
@@ -25,10 +25,7 @@
     "@scbd/default-options": "^0.0.54",
     "@scbd/webpack-plugin-public-path": "^0.0.1",
     "change-case": "^4.1.1",
-    "check-ie": "^2.0.0",
-    "ky": "^0.16.1",
-    "ky-universal": "^0.3.0",
-    "whatwg-fetch": "^3.0.0"
+    "check-ie": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -39,8 +36,12 @@
     "core-js": "^3.4.4",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
+    "ky-universal": "^0.5.0",
     "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "ky": "^0.16.1",
+    "ky-universal": "^0.3.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "@ecosystem": {
     "symlinkWorkspaces": true
