--- a/packages/map-nav/package.json
+++ b/packages/map-nav/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@scbd/map-nav",
-  "version": "0.0.34",
+  "version": "0.0.36",
   "private": false,
   "license": "MIT",
-  "main": "dist/MapNav.common.js",
+  "main": "dist/MapNav.umd.min.js",
   "unpkg": "dist/MapNav.umd.min.js",
   "browser": {
     "./sfc": "src/index.vue"
@@ -25,8 +25,8 @@
     "@scbd/am4-map-base": "^0.0.8",
     "@scbd/default-options": "0.0.54",
     "@scbd/self-embedding-component": "^0.0.9",
-    "change-case": "^4.1.0",
     "core-js": "^3.4.3",
+    "limax": "^2.0.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
+    "superagent": "^5.2.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
